Bug 783030: Prevent the profiled line number from incorrectly pointing to the start. r=bhackett